# omni-stream

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-en.md  README-zh.md  README.md  cliff.toml  config.example.toml  pyproject.toml  rustfmt.toml  start.sh
.github/workflows/: build.yml
docs/: configuration_module_design.md  design.md  development_guide.md  edit_features_guide.md  how_to_release.md  parquet_rows_view_design.md  parquet_rows_view_spec.md  parquet_rows_view_user_guide.md  storage_trait_design.md
frontend/: AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  convert.ts  files.ts  query.ts  storage.ts
frontend/src/components/: BatchActionBar.tsx  BatchMoveDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  EntryContextMenu.tsx  EntryIcon.tsx  FileDetailsDialog.tsx  FileGrid.tsx  FileList.tsx  FileTile.tsx  GridFitToggle.tsx  NewFileDialog.tsx  NewFolderDialog.tsx  PathBreadcrumb.tsx  PathNavigator.tsx  PreviewModal.tsx  RowsPage.tsx  ShortcutHelpDialog.tsx  Sidebar.tsx  SqlPage.tsx  StorageRedirect.tsx  StorageSwitcher.tsx  TokenPrompt.tsx  UploadDialog.tsx  ViewToggle.tsx
frontend/src/components/preview/: AudioPreview.tsx  CsvPreview.tsx  DataTable.tsx  GenericPreview.tsx  ImagePreview.tsx  MarkdownProse.tsx  NdjsonPreview.tsx  PageControls.test.tsx  PageControls.tsx  ParquetPreview.tsx  ParquetSqlTab.tsx  PartialInfoNotice.tsx  PdfPreview.tsx  PreviewSpinner.tsx  ReadmePanel.tsx  RowsView.tsx  RowsViewHint.tsx  TextPreview.tsx  VideoPreview.tsx  markdown-prose-class.ts  p0-safety.test.tsx  registry.ts  rows-ai-prompt.ts  rows-render.tsx  rows-rules-dialog.tsx  rows-widgets.tsx  types.ts  widget-highlight.tsx  widget-markdown.tsx  widget-shared.tsx  widget-text.tsx
frontend/src/components/ui/: button-variants.ts  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  kbd.tsx  sonner.tsx  table.tsx  tabs.tsx  tooltip.tsx
frontend/src/hooks/: use-command-items.ts  use-favorites.test.ts  use-favorites.ts  use-global-shortcut.ts  use-grid-fit.ts  use-line-numbers.ts  use-local-storage.ts  use-media-query.ts  use-overflow.ts  use-recents.ts  use-resizable-width.test.ts  use-resizable-width.ts  use-rows-presets.ts  use-rows-view-config.ts  use-rows-view-hint.ts  use-selection.ts  use-sidebar-collapsed.ts  use-sort-dir.ts  use-storage.ts  use-tree-expanded.ts  use-view-mode.ts
frontend/src/lib/: accessibility.ts  api-error.ts  code-editor.ts  csv-parser.test.ts  csv-parser.ts  document-title.test.ts  document-title.ts  favicon.test.ts  favicon.ts  file-list-ux.test.ts  file-list-ux.ts  format.ts  fuzzy.ts  highlight-json5.css  highlight-json5.ts  highlight-sql.css  highlight-sql.ts  highlight.ts  keyboard.ts  markdown.ts  parquet.ts  path.test.ts  path.ts  prism-shim.d.ts  resolve-uri.test.ts  resolve-uri.ts  route-path.test.ts  route-path.ts  roving-navigation.test.ts  roving-navigation.ts  rows-applicability.test.ts  rows-applicability.ts  rows-paths.test.ts  rows-paths.ts  rows-schema.test.ts  rows-schema.ts  rows-selector-eval.test.ts  rows-selector-eval.ts  rows-selector.test.ts  rows-selector.ts  (+15 more)
frontend/src/types/: storage.ts
src/: auth.rs  cli_style.rs  config.rs  error.rs  handlers.rs  main.rs  thumbs.rs
src/sql/: convert.rs  diag.rs  exec.rs  jobs.rs  mod.rs  probe.rs  session.rs  validate.rs
src/storage/: factory.rs  local.rs  mod.rs  s3.rs
tests/: start-sh.test.sh
