[package]
name = "omni-stream"
version = "0.1.0"
edition = "2024"
publish = ["mirror"]

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "net", "signal"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
thiserror = "2"
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"

axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
